<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:textDirection="rtl"
    >
    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/asset2"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:tint="#ffff"
        />

    <LinearLayout
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_gravity="center"
    android:layoutDirection="rtl"
    android:padding="10dp"
    android:background="@drawable/editetextform"

        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/message"
            android:adjustViewBounds="true"
            />
        <EditText
            android:id="@+id/emailtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/emailloginmassage"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/editetextform"
        android:padding="10dp"
        android:layoutDirection="rtl"

        >


        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/key"
            android:adjustViewBounds="true"
            />

        <EditText
            android:id="@+id/passwordtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:hint="@string/passwordloginmassage"
            android:gravity="right"
            />
    </LinearLayout>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/loginbuttons"
        android:padding="20dp"
        android:text="@string/loginbutton"
        android:textColor="#ffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signupbuttom"
        android:textSize="20dp"
        android:padding="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/generalbuttun"
        android:textColor="#fff"
        />
    <TextView
        android:id="@+id/forgotpasstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpassword"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="15dp"
        android:clickable="true"
        android:textColor="#fff"
        />
</LinearLayout>