<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/backicon"
            android:clickable="true"
            android:tint="#ffff"
            android:layout_margin="10dp"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/signup"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:layout_margin="10dp"
            />



    </RelativeLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/editetextform"
        android:padding="10dp"


        >


        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/message"
            android:adjustViewBounds="true"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"
            android:hint="@string/emailloginmassage"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/editetextform"
        android:padding="10dp"


        >


        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/key"

            />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="textPassword"
            android:gravity="right"
            android:background="@android:color/transparent"
            android:hint="@string/passwordloginmassage"
            android:layoutDirection="rtl"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/editetextform"
        android:padding="10dp"
        >


        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/key"
            android:adjustViewBounds="true"
            />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="right"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:hint="@string/reapetpass"
            />
    </LinearLayout>
    <LinearLayout
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    android:background="@drawable/editetextform"
    android:padding="10dp"


    >


    <ImageView
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:src="@drawable/username"
        android:adjustViewBounds="true"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:inputType="text"
        android:maxLength="10"
        android:background="@android:color/transparent"
        android:hint="نام کاربری"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/editetextform"
        android:padding="10dp"
        >
        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="text"
            android:maxLength="50"
            android:background="@android:color/transparent"
            android:hint="توضیحات پروفایل"
            />
    </LinearLayout>
    <Button
        android:id="@+id/registerbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signupbuttom"
        android:textSize="20dp"
        android:padding="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/generalbuttun"
        android:textColor="#fff"
        />
<ProgressBar
    android:id="@+id/progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    />

</LinearLayout>